Added paragraph tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="header__logo" src="img/udacity_logo.svg" alt="Udacity Logo">
           <div class="header__title">
             <h1 class="header__name">Ryan Haniff</h1>
-            <h3 class="header__occupancy">Full Stack Web Developer</h3>
+            <p class="header__occupancy">Full Stack Web Developer</p>
           </div>
       </div>
     </header>
